--- a/pages/store.html
+++ b/pages/store.html
@@ -158,7 +158,7 @@
 
     </section>
 
-    <footer>©2026 VOXEL SUPPLY DEPOT.</footer>
+    <footer>©2026 VOXEL ANIMATION.</footer>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
