--- a/pages/events.html
+++ b/pages/events.html
@@ -4,252 +4,249 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transmission Log | VXL_OS</title>
+    <title>VXL // SYSTEM EVENTS</title>
 
-    <script>
-        const savedTheme = JSON.parse(localStorage.getItem('vxl_theme_config'));
-        if (savedTheme) {
-            const root = document.documentElement;
-            Object.keys(savedTheme).forEach(key => {
-                root.style.setProperty(key, savedTheme[key]);
-            });
-        }
-    </script>
-
+    <link rel="stylesheet" href="../theme.css">
     <link rel="stylesheet" href="../styles.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="../main.js" defer></script>
 
     <style>
-        /* PAGE SPECIFIC STYLES */
-        body {
-            background: linear-gradient(180deg, #050505 0%, #0a0a0a 100%);
-            min-height: 100vh;
-            padding-top: 80px;
+        /* 3D Background Container */
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-color: var(--bg-color);
         }
 
-        .header-terminal {
-            text-align: center;
-            margin-bottom: 3rem;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            padding-bottom: 2rem;
-        }
-
-        .countdown-box {
-            font-family: 'Courier New', monospace;
-            font-size: 2rem;
-            font-weight: bold;
-            color: var(--cyber-cyan);
-            text-shadow: 0 0 10px var(--cyber-cyan);
-            margin-top: 1rem;
-        }
-
-        /* TIMELINE LAYOUT */
-        .timeline-container {
-            max-width: 900px;
-            margin: 0 auto;
+        /* Timeline Styles */
+        .timeline {
             position: relative;
+            max-width: 800px;
+            margin: 4rem auto;
+            border-left: 2px solid rgba(255, 255, 255, 0.1);
             padding-left: 2rem;
         }
 
-        /* The Vertical Data Line */
-        .timeline-container::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            width: 2px;
-            background: linear-gradient(180deg, var(--cyber-cyan) 0%, rgba(255, 255, 255, 0.1) 100%);
-            box-shadow: 0 0 8px var(--cyber-cyan);
-        }
-
-        .event-node {
+        .event-card {
             position: relative;
             margin-bottom: 3rem;
-            opacity: 0;
-            /* Animated in by JS */
-            transform: translateX(20px);
-            transition: all 0.5s ease;
-        }
-
-        .event-node.visible {
-            opacity: 1;
-            transform: translateX(0);
-        }
-
-        /* The Dot on the line */
-        .event-node::before {
-            content: '';
-            position: absolute;
-            left: -2.35rem;
-            /* Adjust based on padding */
-            top: 1.5rem;
-            width: 12px;
-            height: 12px;
-            background: #000;
-            border: 2px solid var(--cyber-cyan);
-            border-radius: 50%;
-            z-index: 2;
-        }
-
-        .event-card {
-            background: linear-gradient(145deg, var(--netherite-panel), #0a0a0a);
+            background: var(--panel-bg);
             border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 1.5rem;
-            border-radius: 6px;
-            position: relative;
-            overflow: hidden;
+            backdrop-filter: blur(5px);
+            transition: transform 0.3s, border-color 0.3s;
         }
 
         .event-card:hover {
-            border-color: var(--hover-glow);
-            box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.05);
+            transform: translateX(10px);
+            border-color: var(--cyber-cyan);
         }
 
-        /* Status Badge */
-        .status-badge {
+        .event-card::before {
+            content: '';
             position: absolute;
-            top: 0;
-            right: 0;
-            background: rgba(255, 255, 255, 0.05);
-            padding: 0.2rem 0.8rem;
-            font-size: 0.7rem;
-            font-family: 'Courier New';
-            border-bottom-left-radius: 6px;
-            border-left: 1px solid rgba(255, 255, 255, 0.1);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            left: -2.6rem;
+            /* Align with timeline line */
+            top: 1.5rem;
+            width: 1rem;
+            height: 1rem;
+            background: #000;
+            border: 2px solid var(--cyber-cyan);
+            border-radius: 50%;
+            box-shadow: 0 0 10px var(--cyber-cyan);
         }
 
-        .status-badge.incoming {
+        .date-badge {
+            display: inline-block;
+            background: rgba(0, 255, 255, 0.1);
             color: var(--cyber-cyan);
-        }
-
-        .status-badge.locked {
-            color: #555;
-        }
-
-        .date-display {
-            font-family: 'Courier New', monospace;
-            color: var(--cyber-magenta);
-            font-weight: bold;
-            font-size: 1.1rem;
+            padding: 0.2rem 0.5rem;
+            font-family: 'Pixelify Sans';
+            font-size: 0.8rem;
+            border: 1px solid var(--cyber-cyan);
             margin-bottom: 0.5rem;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+        }
+
+        .event-title {
+            color: #fff;
+            margin: 0.5rem 0;
+            font-size: 1.4rem;
+        }
+
+        .event-desc {
+            color: #888;
+            font-size: 0.95rem;
+            line-height: 1.6;
+        }
+
+        .rsvp-btn {
+            display: inline-block;
+            margin-top: 1rem;
+            padding: 0.5rem 1rem;
+            border: 1px solid #444;
+            color: #fff;
+            text-decoration: none;
+            font-size: 0.8rem;
+            transition: all 0.3s;
+            text-transform: uppercase;
+        }
+
+        .rsvp-btn:hover {
+            background: var(--cyber-cyan);
+            color: #000;
+            border-color: var(--cyber-cyan);
         }
     </style>
 </head>
 
 <body>
 
-    <nav style="position:fixed; top:20px; left:20px; z-index:100;">
-        <a href="../index.html" class="resource-item" style="padding: 0.5rem 1rem; width: auto;">
-            <i class="fa-solid fa-arrow-left"></i> RETURN_SIGNAL
+    <div id="canvas-container"></div>
+
+    <nav style="padding: 2rem; display: flex; justify-content: space-between; align-items: center;">
+        <a href="../index.html" class="resource-item" style="display:inline-block; width:auto; padding: 0.5rem 1rem;">
+            &lt; RETURN TO OS
         </a>
     </nav>
 
-    <header class="header-terminal">
-        <h1 class="section-title" style="margin-bottom: 0.5rem;">TRANSMISSION LOG</h1>
-        <p style="color: #888; font-family: 'Courier New';">NEXT_EVENT_SYNC_TIMER:</p>
-        <div class="countdown-box" id="timer">00:00:00:00</div>
-    </header>
+    <section style="max-width: 1200px; margin: 0 auto; padding: 0 2rem;">
+        <h1 class="section-title">SYSTEM_LOGS // EVENTS</h1>
 
-    <section class="timeline-container">
-
-        <div class="event-node">
+        <div class="timeline">
             <div class="event-card">
-                <div class="status-badge incoming">/// SIGNAL_INCOMING</div>
-                <div class="date-display">
-                    <i class="fa-regular fa-clock"></i> MAR 15, 2026
-                </div>
-                <h3 style="color: var(--text-main); font-size: 1.5rem; margin-bottom: 0.5rem;">The Voxel Summit</h3>
-                <p style="color: #aaa; margin-bottom: 1rem; line-height: 1.5;">
-                    Annual gathering of the high-poly council. Discussion topics: Render pipelines, cubic storytelling,
-                    and the Redstone logic update.
+                <span class="date-badge">2026.04.15</span>
+                <h3 class="event-title">VOXEL ANIMATION</h3>
+                <p class="event-desc">
+                    A 48-hour jam focused on procedural generation and voxel aesthetics.
+                    Open to all operatives. Theme: "Decentralized Dreams."
                 </p>
-                <div
-                    style="font-size: 0.8rem; color: var(--cyber-cyan); border-top: 1px solid rgba(255,255,255,0.1); padding-top: 0.5rem;">
-                    <i class="fa-solid fa-location-dot"></i> COORDINATES: DISCORD_STAGE // HYPER_REGION_1
-                </div>
+                <a href="#" class="rsvp-btn">REGISTER SIGNAL</a>
             </div>
-        </div>
 
-        <div class="event-node">
             <div class="event-card">
-                <div class="status-badge incoming">/// PENDING_AUTH</div>
-                <div class="date-display">
-                    <i class="fa-regular fa-calendar"></i> APR 02, 2026
-                </div>
-                <h3 style="color: var(--text-main); font-size: 1.5rem; margin-bottom: 0.5rem;">Project: DOGMA - Public
-                    Beta</h3>
-                <p style="color: #aaa; margin-bottom: 1rem;">
-                    First public access to the Dogma server architecture. Whitelist applications open at 00:00 EST.
-                    <br><i style="font-size:0.8rem; color:#666;">*Requires VXL Client v4.2</i>
+                <span class="date-badge">2026.06.01</span>
+                <h3 class="event-title">Asset Drop: "SECTOR-1"</h3>
+                <p class="event-desc">
+                    Major update to the Supply Depot. Releasing the Sector 1 environment pack
+                    and new mecha rig presets.
                 </p>
-                <div
-                    style="font-size: 0.8rem; color: var(--cyber-cyan); border-top: 1px solid rgba(255,255,255,0.1); padding-top: 0.5rem;">
-                    <i class="fa-solid fa-server"></i> SERVER: PLAY.VXL.NET
-                </div>
+                <a href="#" class="rsvp-btn">VIEW PREVIEW</a>
             </div>
-        </div>
 
-        <div class="event-node">
-            <div class="event-card" style="opacity: 0.6; filter: grayscale(1);">
-                <div class="status-badge locked">/// ENCRYPTED</div>
-                <div class="date-display">
-                    <i class="fa-solid fa-lock"></i> ??? ??, 2026
-                </div>
-                <h3 style="color: #666; font-size: 1.5rem; margin-bottom: 0.5rem;">[REDACTED]</h3>
-                <p style="color: #444; margin-bottom: 1rem;">
-                    Data stream corrupted. Key required to decrypt future roadmap.
+            <div class="event-card">
+                <span class="date-badge">2026.08.20</span>
+                <h3 class="event-title">System Maintenance</h3>
+                <p class="event-desc">
+                    Scheduled downtime for server migration. The Grid will be offline
+                    for approximately 4 hours.
                 </p>
             </div>
         </div>
-
     </section>
 
-    <footer style="margin-top: 4rem;">
-        ©2026 VOXEL COMMUNICATIONS ARRAY.
-    </footer>
+    <footer>©2026 VOXEL ANIMATION.</footer>
 
-    <script>
-        // 1. ANIMATE ITEMS ON LOAD
-        document.addEventListener("DOMContentLoaded", () => {
-            const nodes = document.querySelectorAll('.event-node');
-            nodes.forEach((node, index) => {
-                setTimeout(() => {
-                    node.classList.add('visible');
-                }, index * 200); // Stagger effect
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+            }
+        }
+    </script>
+
+    <script type="module">
+        import * as THREE from 'three';
+        import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
+        import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
+        import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
+
+        const scene = new THREE.Scene();
+        scene.fog = new THREE.FogExp2(0x050505, 0.04);
+
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 5;
+
+        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.toneMapping = THREE.ReinhardToneMapping;
+        document.getElementById('canvas-container').appendChild(renderer.domElement);
+
+        const renderScene = new RenderPass(scene, camera);
+        const bloomPass = new UnrealBloomPass(new THREE.Vector2(window.innerWidth, window.innerHeight), 1.5, 0.4, 0.85);
+        bloomPass.strength = 1.0;
+        bloomPass.radius = 0.8;
+
+        const composer = new EffectComposer(renderer);
+        composer.addPass(renderScene);
+        composer.addPass(bloomPass);
+
+        const voxels = [];
+        const geometry = new THREE.BoxGeometry(1, 1, 1);
+        // Using CSS variable colors would require parsing computed styles, 
+        // so we stick to hardcoded hexes that match your theme for the 3D part.
+        const colors = [0x00ffff, 0xff00ff, 0x0055ff, 0x444444];
+
+        for (let i = 0; i < 50; i++) {
+            const color = colors[Math.floor(Math.random() * colors.length)];
+            const material = new THREE.MeshStandardMaterial({
+                color: 0x111111,
+                emissive: color,
+                emissiveIntensity: Math.random() * 1.5 + 0.5,
+                roughness: 0.1,
+                metalness: 0.8,
+                transparent: true,
+                opacity: 0.8
             });
 
-            startCountdown();
-        });
-
-        // 2. COUNTDOWN LOGIC (Target: March 15, 2026)
-        function startCountdown() {
-            const targetDate = new Date("March 15, 2026 00:00:00").getTime();
-
-            setInterval(() => {
-                const now = new Date().getTime();
-                const distance = targetDate - now;
-
-                if (distance < 0) {
-                    document.getElementById("timer").innerHTML = "EVENT_IN_PROGRESS";
-                    return;
-                }
-
-                const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                document.getElementById("timer").innerHTML =
-                    `${days}d : ${hours}h : ${minutes}m : ${seconds}s`;
-            }, 1000);
+            const mesh = new THREE.Mesh(geometry, material);
+            const s = Math.random() * 0.4 + 0.1;
+            mesh.scale.set(s, s, s);
+            mesh.position.set(
+                (Math.random() - 0.5) * 25,
+                (Math.random() - 0.5) * 15,
+                -2 - Math.random() * 8
+            );
+            mesh.userData = {
+                rotX: (Math.random() - 0.5) * 0.02,
+                rotY: (Math.random() - 0.5) * 0.02,
+                baseY: mesh.position.y,
+                floatSpeed: Math.random() * 0.5 + 0.2,
+                floatOffset: Math.random() * Math.PI * 2
+            };
+            scene.add(mesh);
+            voxels.push(mesh);
         }
+
+        const pointLight = new THREE.PointLight(0xffffff, 1);
+        pointLight.position.set(0, 5, 5);
+        scene.add(pointLight);
+
+        const clock = new THREE.Clock();
+        function animate() {
+            requestAnimationFrame(animate);
+            const time = clock.getElapsedTime();
+            voxels.forEach(mesh => {
+                mesh.rotation.x += mesh.userData.rotX;
+                mesh.rotation.y += mesh.userData.rotY;
+                mesh.position.y = mesh.userData.baseY + Math.sin(time * mesh.userData.floatSpeed + mesh.userData.floatOffset) * 0.5;
+            });
+            composer.render();
+        }
+        animate();
+
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            composer.setSize(window.innerWidth, window.innerHeight);
+        });
     </script>
 </body>
 
