--- a/pages/team.html
+++ b/pages/team.html
@@ -121,7 +121,7 @@
         <div class="team-grid" id="team-container"></div>
     </section>
 
-    <footer>©2026 VOXEL SUPPLY DEPOT.</footer>
+    <footer>©2026 VOXEL ANIMATION.</footer>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
